# Final_Project

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/source/: finnhub.doctree  modules.doctree
docs/_build/html/: conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  usage.rst.txt
docs/_build/html/source/: finnhub.html  modules.html
docs/source/: finnhub.rst  modules.rst
finnhub/: finnhub.py
tests/: test_finnhub.py
