[tool.poetry]
name = "finnhub"
version = "0.1.0"
description = "Finnhub API Client"
authors = ["JingchaoPeng <jingchao.p@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
