[tool.poetry]
name = "finnhub"
version = "0.1.0"
description = "Finnhub API Client"
authors = ["JingchaoPeng <jingchao.p@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
requests = "^2.25.1"
bs4 = "^0.0.1"
plotly = "^4.14.1"

[tool.poetry.dev-dependencies]
Sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
